k8s/two-tier-app-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: two-tier-app-pod
  labels:
    app: two-tier-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: two-tier-app
  template:
    metadata:
      labels:
        app: two-tier-app
    spec:
      containers:
        - name: two-tier-app-container
          image: shri2151/flaskapp:58
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
          imagePullPolicy: Always
