k8s/two-tier-app-svc.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: two-tier-app
  name: two-tier-app-service
  namespace: app
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
      #nodePort: 30006
  selector:
    app: two-tier-app
  type: LoadBalancer
