k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flaskapp-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: rokadehospital.life  # Replace with your GoDaddy domain name
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: two-tier-app-service
                port:
                  number: 80
